frontend/src/components/chatbot/chatbotcomp.css
.chatbox-container.hidden {
  display: none;
}

.chatbox {
  background: #fff;
  z-index: 2000;
  width: 370px;
  height: 90%;
  position: absolute;
  top: 80px;
  left: 35%;
  transition: box-shadow 0.2s, left 0.5s;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border: solid 1px #ccc;
  display: flex;
  flex-direction: column;
}

.with-data .chatbox {
  left: calc(99% - 370px);
}

.chatbox.drag {
  box-shadow: 0 0 20px #ccc;
}

.draggable {
  cursor: move;
}

.chatbox .chatbox-title {
  background-color: #4e8cff;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  color: #fff;
  height: 55px;
  display: flex;
  padding: 15px;
}

.chatbox .chatbox-title .chat-window-title {
  font-size: 16px;
  width: 95%;
}

.chatbox .chatbox-title .chatbot-close {
  cursor: pointer;
}

.chatbox .chatbox-chat-area {
  height: 86%;
}

.chatbox-chat-area .chat-area-msgs {
  padding-top: 10px;
  height: 100%;
  overflow-y: scroll;
}

.chatbox-chat-area .chat-area-msgs .agent {
  float: right;
  margin-right: 10px;
  overflow-wrap: break-word;
  display: flex;
}

.chatbox-chat-area .chat-area-msgs .agent .msg {
  background-color: #ecebef;
  margin-right: 10px;
  border-radius: 5px;
  padding: 15px;
  max-width: 270px;
  position: relative;
}

.chatbox-chat-area .chat-area-msgs .agent .msg button.default {
  border: solid 1px #a79b9b;
  border-radius: 5px;
  padding: 0 4px;
  background: #fff; /* Old browsers */
  background: -moz-linear-gradient(top, #fff 0%, #e5e5e5 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top, #fff 0%, #e5e5e5 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, #fff 0%, #e5e5e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff', endColorstr='#e5e5e5', GradientType=0); /* IE6-9 */
}

.chatbox-chat-area .chat-area-msgs .agent .msg button:hover {
  box-shadow: 0 0 5px #ccc;
}

.chatbox-chat-area .chat-area-msgs .agent .msg::after {
  content: "";
  width: 0;
  height: 0;
  border-right: 7px solid transparent;
  border-top: 10px solid #ececec;
  position: absolute;
  right: -7px;
  top: 4px;
}

.chatbox-chat-area .chat-area-msgs .agent .agent-pic {
  width: 35px;
  height: 35px;
  border: solid 6px #4e8cff;
  border-radius: 50%;
}

.chatbox-chat-area .chat-area-msgs .user {
  float: left;
  margin-left: 10px;
}

.chatbox-chat-area .chat-area-msgs .user .msg {
  background-color: #4e8cff;
  color: #fff;
  border-radius: 5px;
  padding: 15px;
  max-width: 270px;
  position: relative;
  overflow-wrap: break-word;
}

.chatbox-chat-area .chat-area-msgs .user .msg::before {
  content: "";
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-top: 10px solid #4e8cff;
  position: absolute;
  left: -7px;
  top: 4px;
}

.chatbox-chat-area .chat-area-msgs .agent .time,
.chatbox-chat-area .chat-area-msgs .user .time {
  color: #444;
  font-size: 12px;
  margin-top: 4px;
  margin-bottom: 7px;
  visibility: hidden;
}

.chatbox-chat-area .chat-area-msgs .agent .time {
  float: right;
  margin-right: 10px;
}

.chatbox-chat-area .chat-area-msgs .agent .msg:hover ~ .time,
.chatbox-chat-area .chat-area-msgs .user .msg:hover ~ .time {
  visibility: visible;
}

.chat-area-input {
  flex-grow: 1;
}

.chat-area-input textarea {
  box-shadow: 0 -10px 20px -5px rgba(150, 165, 190, 0.4);
  padding-left: 10px;
  width: 100%;
  height: 91%;
  border: none;
  outline: none;
  resize: none;
}

@media (max-width: 576px) {
  .chatbox {
    left: 0;
    top: 70px;
    background: #fff;
    width: 100%;
    height: 90%;
  }

  .chatbox .chatbox-chat-area {
    height: 91%;
  }

  .chatbox-chat-area .chat-area-msgs {
    height: 455px;
  }

  .chatbox-chat-area .chat-area-input textarea {
    box-shadow: 0 -10px 20px -5px rgba(150, 165, 190, 0.4);
    padding-left: 10px;
    width: 100%;
    outline: none;
    border-top: solid 1px #ccc;
    resize: none;
  }
}

